add interface for getting configuration
